--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ampler Launcher</title>
+    <title>Eaglercraft Launcher</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 1100px)" href="css/screensize.css">
     <link rel="stylesheet" media="screen and (max-height: 550px)" href="css/screensize.css">
     <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <!-- Discord-->
-    <meta content="Ampler Launcher" property="og:title">
-    <meta content="A minecraft themed launcher for Eaglercraft!" property="og:description">
-    <meta content="https://irv77.github.io/AmplerLauncher/" property="og:url">
-    <meta content="https://irv77.github.io/AmplerLauncher/assets/images/logo.png" property="og:image">
-    <meta content="#786d81" data-react-helmet="true" name="theme-color">
+   
 </head>
 
 <body>
@@ -84,7 +79,7 @@
         </div>
         <div id="faq">
             <p class="bolded faqtitle">Frequently Asked Questions</p>
-            <p>Here are some frequently asked questions about Ampler Launcher.</p>
+            <p>Here are some frequently asked questions about Eaglercraft Launcher.</p>
             <div id="faqbox"></div>
         </div>
         <div id="installations"><div id="installationsbox"></div></div>
