add packs template

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="sidebar" id="sidebar">
         <div id="gtabs1">
-        
+
         </div>
         <div onclick="webedition()" id="gtabs2" class="sidebarOptions selected">
             <img src="./assets/images/sidebar/i-web.png">
@@ -51,6 +51,13 @@
             <div class="gTabsText">
                 <p class="eaglercraftText"> EAGLERCRAFT : </p>
                 <p>Mobile/Controller </p>
+            </div>
+        </div>
+        <div onclick="eaglerpacks()" id="gtabs5" class="sidebarOptions">
+            <img src="./assets/images/sidebar/i-packs.png">
+            <div class="gTabsText">
+                <p class="eaglercraftText"> EAGLERCRAFT : </p>
+                <p>Resource Packs </p>
             </div>
         </div>
         <div id="gtabs5" class="sidebarOptions sidebarBottom" onclick="errorNA('credits')">
