--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p>Resource Packs </p>
             </div>
         </div>
-        <div id="gtabs5" class="sidebarOptions sidebarBottom" onclick="errorNA('credits')">
+        <div id="gtabs5" class="sidebarOptions sidebarBottom" onclick="credits()">
             <img src="./assets/images/sidebar/m-credits.png"><div class="gTabsText"><p> Credits</p></div>
         </div>
         <div id="gtabs6" class="sidebarOptions sidebarBottom" onclick="errorNA('settings')">
