--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="gtabs5" class="sidebarOptions sidebarBottom" onclick="credits()">
             <img src="./assets/images/sidebar/m-credits.png"><div class="gTabsText"><p> Credits</p></div>
         </div>
-        <div id="gtabs6" class="sidebarOptions sidebarBottom" onclick="errorNA('settings')">
+        <div id="gtabs6" class="sidebarOptions sidebarBottom" onclick="settings()">
             <img src="./assets/images/sidebar/m-settings.png"><div class="gTabsText"><p> Settings</p></div>
         </div>
         <div class="launcherVersion"><p>v1.1.00</p></div>
